[gd_scene load_steps=8 format=2]

[ext_resource path="res://Import/IMG_5482.PNG" type="Texture" id=1]
[ext_resource path="res://Import/IMG_5484.PNG" type="Texture" id=2]
[ext_resource path="res://Import/IMG_5490.PNG" type="Texture" id=3]
[ext_resource path="res://Import/IMG_5492.PNG" type="Texture" id=4]
[ext_resource path="res://Import/IMG_5366.PNG" type="Texture" id=5]
[ext_resource path="res://Import/IMG_5363.PNG" type="Texture" id=6]
[ext_resource path="res://Script/Popup_Items.gd" type="Script" id=7]

[node name="Popup_Items" type="Node2D"]
script = ExtResource( 7 )

[node name="Pop_Image" type="Node2D" parent="."]

[node name="MainBG" type="Sprite" parent="Pop_Image"]
texture = ExtResource( 4 )
centered = false

[node name="Buttons" type="Node2D" parent="."]
position = Vector2( 168.179, 825.76 )

[node name="Items" type="ItemList" parent="Buttons"]
margin_right = 285.0
margin_bottom = 606.0
custom_colors/guide_color = Color( 0.898039, 0.623529, 0.623529, 1 )
items = [ "Defender", ExtResource( 1 ), false, "Booster", ExtResource( 2 ), false, "Repair", ExtResource( 3 ), false ]
allow_reselect = true
fixed_icon_size = Vector2( 96, 96 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="TextureButton" parent="Buttons"]
margin_left = 410.0
margin_top = -80.0
margin_right = 482.0
margin_bottom = -12.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefenderCount" type="Label" parent="Buttons"]
margin_left = 300.0
margin_top = 40.0
margin_right = 340.0
margin_bottom = 54.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.12549, 0.25098, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoosterCount" type="Label" parent="Buttons"]
margin_left = 300.0
margin_top = 140.0
margin_right = 340.0
margin_bottom = 154.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.12549, 0.25098, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RepairCount" type="Label" parent="Buttons"]
margin_left = 300.0
margin_top = 240.0
margin_right = 340.0
margin_bottom = 254.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.12549, 0.25098, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="Buttons/Items" to="." method="_on_Items_item_selected"]
[connection signal="pressed" from="Buttons/OptionButton" to="." method="_on_OptionButton_pressed"]
